...
                                                        </constraints>
                                                    </view>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email *" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2db-iC-L6h" customClass="LeftIndentedTextField">
                                                        <rect key="frame" x="390" y="41" width="245" height="41"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="referrerEmail" label="referrerEmail">
                                                            <accessibilityTraits key="traits" searchField="YES"/>
                                                        </accessibility>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                                                <state key="normal" title="Submit">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                                </connections>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Conversion" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BBz-2b-yfu">
                                                <rect key="frame" x="468" y="78" width="90" height="21"/>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
...
                                                        </constraints>
                                                    </view>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Campaign *" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zfm-y9-S6X" customClass="LeftIndentedTextField">
                                                        <rect key="frame" x="390" y="46" width="245" height="41"/>
                                                        <constraints>
...
                                                        </connections>
                                                    </textField>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Revenue Amount *" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rvd-6P-JzP" customClass="LeftIndentedTextField">
                                                        <rect key="frame" x="390" y="97" width="245" height="41"/>
                                                        <constraints>
...
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email *" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nwG-dy-OQQ" customClass="LeftIndentedTextField">
                                                        <rect key="frame" x="390" y="41" width="245" height="41"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="referredEmail">
                                                            <accessibilityTraits key="traits" searchField="YES"/>
                                                        </accessibility>
...
                                                        </connections>
                                                    </textField>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Rj-2k-Xld" customClass="LeftIndentedTextField">
                                                        <rect key="frame" x="390" y="92" width="245" height="41"/>
                                                        <constraints>
...
                                                        </connections>
                                                    </textField>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YPv-Lu-ddG" customClass="LeftIndentedTextField">
                                                        <rect key="frame" x="390" y="143" width="245" height="41"/>
                                                        <constraints>
...
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="#FFFFFF" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e3L-Rm-zcp">
                                        <rect key="frame" x="190" y="275" width="80" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="hexTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="80" id="u4v-k8-5nb"/>
...
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Refer a Friend" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xbU-cL-oj1">
                                <rect key="frame" x="20" y="78" width="984" height="21"/>
                                <constraints>
...
                                                <rect key="frame" x="8" y="8" width="76" height="28"/>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                                                <state key="normal" title="Clear Image">
                                                    <color key="titleColor" red="0.43529411764705883" green="0.43529411764705883" blue="0.4392156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                                </connections>
                                            </textField>
