...

- (IBAction)submitTapped:(id)sender {
    [self identify];
    [self.tfEmail resignFirstResponder];
}

// Action that happens when 'Done' is clicked for certian keyboards
- (void)doneClicked:(id)sender {
    [self.view endEditing:YES];
}


#pragma mark - TextField Delegate
...
}


#pragma mark - WelcomeScreen Delegate

- (void)welcomeScreenActionButtonPressed:(UIButton *)actionButton {
    UIAlertController *actionAlert = [UIAlertController cancelAlertWithTitle:@"Action Button" message:@"You pressed the action button on the welcome screen" cancelMessage:@"Okay"];
    [self presentViewController:actionAlert animated:YES completion:nil];
}

- (void)welcomeScreenLinkPressedAtIndex:(NSInteger)linkIndex {
    UIAlertController *linkAlert = [UIAlertController cancelAlertWithTitle:@"Link Tapped" message:[NSString stringWithFormat:@"You tapped a link at index %li", (long)linkIndex] cancelMessage:@"Okay"];
    [self presentViewController:linkAlert animated:YES completion:nil];
...
        
        // Call identify
        [AmbassadorSDK identifyWithUserID:UIDString traits:traitsDict autoEnrollCampaign:enrollCampaign completion:^(BOOL success){
            if (success){
                // Create an identify success message
                NSString *confirmationMessage = [NSString stringWithFormat:@"You have succesfully identified as %@! You can now track conversion events and create commissions!", email];
                UIAlertController *confirmationAlert = [UIAlertController cancelAlertWithTitle:@"Great!" message:confirmationMessage cancelMessage:@"Okay"];
                [self presentViewController:confirmationAlert animated:YES completion:nil];
            }
            else{
                // Create an identify error message
                NSString *confirmationMessage = [NSString stringWithFormat:@"There was an error identifying."];
                UIAlertController *confirmationAlert = [UIAlertController cancelAlertWithTitle:@"Error" message:confirmationMessage cancelMessage:@"Okay"];
...
    }];
    
    return javaEntry;
}

- (void)showValidationError:(NSString*)action {
    UIAlertController *invalidEmailAlert = [UIAlertController cancelAlertWithTitle:@"Hold on!" message:[NSString stringWithFormat:@"Please enter a valid email address before %@.", action] cancelMessage:@"Okay"];
    [self presentViewController:invalidEmailAlert animated:YES completion:nil];
}

- (NSString *)tabSpace {
    return @"                                 ";
}
...
